<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support_email" translatable="false">playlist@email.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_text">Привет! Посмотри курс по Android-разработке в Яндекс Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="choose_email_client">Выберите почтовый клиент</string>
    <string name="no_email_clients_found">Не найдено почтовых клиентов</string>
    <string name="track_name">Название песни</string>
    <string name="artist_name">Артист</string>
    <string name="track_time">Продолжительность</string>
    <string name="search_error">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью</string>
    <string name="loading_error">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="play_progress">Прогресс воспроизведения</string>
    <string name="album_name">Альбом</string>
    <string name="year_number">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country_name">Страна</string>
</resources>