<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_main_size" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/horizontal_16"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:textAllCaps="false"
            android:text="@string/button_search"
            android:textColor="@color/black"
            android:textSize="@dimen/text_main_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/library_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/horizontal_16"
            android:backgroundTint="@color/white"
            app:textAllCaps="false"
            android:text="@string/button_library"
            android:textSize="@dimen/text_main_size"
            android:textColor="@color/black"
            app:icon="@drawable/library_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/horizontal_16"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/white"
            app:textAllCaps="false"
            android:text="@string/button_settings"
            android:textSize="@dimen/text_main_size"
            android:textColor="@color/black"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius"/>
    </LinearLayout>
</LinearLayout>