<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingStart="13dp"
    android:paddingEnd="13dp"
    android:paddingTop="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent">

        <ImageView
            android:id="@+id/artworkImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/icon_padding">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_name"
            android:textSize="@dimen/text_settings_size"
            android:textColor="?attr/colorPrimaryVariant"
            android:fontFamily="@font/ys_display_regular"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/artistName"
                style="@style/ItemTrackTextStyle"
                android:text="@string/artist_name"
                />

            <ImageView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/dot"
                app:tint="?attr/colorTertiary"/>

            <TextView
                android:id="@+id/trackTime"
                style="@style/ItemTrackTextStyle"
                android:text="@string/track_time"
                />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/forward_arrow_icon"
        app:tint="?attr/colorTertiary"/>
</LinearLayout>
