<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Заголовок и кнопка назад -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/settings_back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/back_arrow_icon"
            android:backgroundTint="?attr/colorOnPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:text="@string/button_search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_main_size"
            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>

    <!-- Поле поиска -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="?attr/colorSecondaryVariant">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/search_icon"
                android:backgroundTint="?attr/colorOnSecondary" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/button_search"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="textNoSuggestions"
                android:background="@null"
                android:padding="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:importantForAccessibility="yes"
                android:textColor="@color/black"
                android:textColorHint="?attr/colorOnSecondary"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/clearButton"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/search_clear"
                android:backgroundTint="?attr/colorOnSecondary"
                android:visibility="gone"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- 🔽 История поиска -->
    <LinearLayout
        android:id="@+id/searchHistoryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/you_searched"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="54dp"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnTertiary"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorOnPrimary"/>
    </LinearLayout>

    <!-- Нет результатов -->
    <LinearLayout
        android:id="@+id/noResultsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_results_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_error"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Ошибка подключения -->
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_connection_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/connection_error"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/loading_error"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cornerRadius="54dp"
            android:text="@string/retry_button"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnTertiary"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorOnPrimary" />
    </LinearLayout>

    <!-- Основной RecyclerView для результатов поиска -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

</LinearLayout>
