<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/audio_player_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <!-- Кнопка Назад -->
            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/back_arrow_icon"
                android:backgroundTint="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Обложка альбома -->
            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintTop_toBottomOf="@id/button_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1" />

            <!-- Название трека -->
            <TextView
                android:id="@+id/track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/track_name"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_image" />

            <!-- Исполнитель -->
            <TextView
                android:id="@+id/artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/artist_name"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/track_name" />

            <!-- Кнопки управления -->
            <LinearLayout
                android:id="@+id/player_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_name">

                <ImageButton
                    android:id="@+id/button_add_to_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="63dp"
                    android:background="@drawable/add_to_playlist_button"/>

                <ImageButton
                    android:id="@+id/button_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play_button"/>

                <ImageButton
                    android:id="@+id/button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="63dp"
                    android:background="@drawable/add_to_favourites_button"/>
            </LinearLayout>

            <!-- Прогресс воспроизведения -->
            <TextView
                android:id="@+id/track_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/play_progress"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_controls" />

            <!-- Блок с метаданными -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/track_metadata_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/track_progress">

                <!-- Длительность -->
                <TextView
                    android:id="@+id/label_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/track_time"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/track_duration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/track_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_duration"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Альбом -->
                <TextView
                    android:id="@+id/label_album"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/album_name"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/album_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_duration" />

                <TextView
                    android:id="@+id/album_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_album"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Год -->
                <TextView
                    android:id="@+id/label_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/year_number"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/release_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_album" />

                <TextView
                    android:id="@+id/release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_year"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Жанр -->
                <TextView
                    android:id="@+id/label_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/genre_name"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_year" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_genre"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Страна -->
                <TextView
                    android:id="@+id/label_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/country_name"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@+id/country"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_genre" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="13sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_country"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
